--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^0.1.10",
     "axios": "^1.2.4",
     "date-fns": "^2.29.3",
     "iexjs": "^0.4.0",
